--- a/views/portfolio.handlebars
+++ b/views/portfolio.handlebars
@@ -10,36 +10,36 @@
   <div class="row">
     <div class="col-sm-6 col-md-4">
       <div class="thumbnail">
-        <img src="/images/placeholder.jpg" alt="placeholder">
+        <a href="#"><img src="/images/placeholder.jpg" alt="placeholder"></a>
         <div class="caption">
-          <h4>Placeholder stuff</h4>
+          <h4><a href="#">Placeholder stuff</a></h4>
           <p>VHS slow-carb locavore, mlkshk ad small batch fingerstache affogato chillwave butcher PBR&B humblebrag banjo nisi gochujang. Freegan heirloom fugiat everyday carry odio consectetur, skateboard nulla XOXO aliqua raw denim sint mlkshk put a bird on it.</p>
         </div>
       </div>
     </div>
     <div class="col-sm-6 col-md-4">
       <div class="thumbnail">
-        <img src="/images/placeholder.jpg" alt="placeholder">
+        <a href="#"><img src="/images/placeholder.jpg" alt="placeholder"></a>
         <div class="caption">
-          <h4>Placeholder stuff</h4>
+          <h4><a href="#">Placeholder stuff</a></h4>
           <p>VHS slow-carb locavore, mlkshk ad small batch fingerstache affogato chillwave butcher PBR&B humblebrag banjo nisi gochujang. Freegan heirloom fugiat everyday carry odio consectetur, skateboard nulla XOXO aliqua raw denim sint mlkshk put a bird on it.</p>
         </div>
       </div>
     </div>
     <div class="col-sm-6 col-md-4">
       <div class="thumbnail">
-        <img src="/images/placeholder.jpg" alt="placeholder">
+        <a href="#"><img src="/images/placeholder.jpg" alt="placeholder"></a>
         <div class="caption">
-          <h4>Placeholder stuff</h4>
+          <h4><a href="#">Placeholder stuff</a></h4>
           <p>VHS slow-carb locavore, mlkshk ad small batch fingerstache affogato chillwave butcher PBR&B humblebrag banjo nisi gochujang. Freegan heirloom fugiat everyday carry odio consectetur, skateboard nulla XOXO aliqua raw denim sint mlkshk put a bird on it.</p>
         </div>
       </div>
     </div>
     <div class="col-sm-6 col-md-4">
       <div class="thumbnail">
-        <img src="/images/placeholder.jpg" alt="placeholder">
+        <a href="#"><img src="/images/placeholder.jpg" alt="placeholder"></a>
         <div class="caption">
-          <h4>Placeholder stuff</h4>
+          <h4><a href="#">Placeholder stuff</a></h4>
           <p>VHS slow-carb locavore, mlkshk ad small batch fingerstache affogato chillwave butcher PBR&B humblebrag banjo nisi gochujang. Freegan heirloom fugiat everyday carry odio consectetur, skateboard nulla XOXO aliqua raw denim sint mlkshk put a bird on it.</p>
         </div>
       </div>
@@ -50,18 +50,18 @@
   <div class="row">
     <div class="col-sm-6 col-md-4">
       <div class="thumbnail">
-        <img src="/images/placeholder.jpg" alt="placeholder">
+        <a href="#"><img src="/images/placeholder.jpg" alt="placeholder"></a>
         <div class="caption">
-          <h4>Placeholder stuff</h4>
+          <h4><a href="#">Placeholder stuff</a></h4>
           <p>VHS slow-carb locavore, mlkshk ad small batch fingerstache affogato chillwave butcher PBR&B humblebrag banjo nisi gochujang. Freegan heirloom fugiat everyday carry odio consectetur, skateboard nulla XOXO aliqua raw denim sint mlkshk put a bird on it.</p>
         </div>
       </div>
     </div>
     <div class="col-sm-6 col-md-4">
       <div class="thumbnail">
-        <img src="/images/placeholder.jpg" alt="placeholder">
+        <a href="#"><img src="/images/placeholder.jpg" alt="placeholder"></a>
         <div class="caption">
-          <h4>Placeholder stuff</h4>
+          <h4><a href="#">Placeholder stuff</a></h4>
           <p>VHS slow-carb locavore, mlkshk ad small batch fingerstache affogato chillwave butcher PBR&B humblebrag banjo nisi gochujang. Freegan heirloom fugiat everyday carry odio consectetur, skateboard nulla XOXO aliqua raw denim sint mlkshk put a bird on it.</p>
         </div>
       </div>
@@ -72,27 +72,27 @@
   <div class="row">
     <div class="col-sm-6 col-md-4">
       <div class="thumbnail">
-        <img src="/images/placeholder.jpg" alt="placeholder">
+        <a href="#"><img src="/images/placeholder.jpg" alt="placeholder"></a>
         <div class="caption">
-          <h4>Placeholder stuff</h4>
+          <h4><a href="#">Placeholder stuff</a></h4>
           <p>VHS slow-carb locavore, mlkshk ad small batch fingerstache affogato chillwave butcher PBR&B humblebrag banjo nisi gochujang. Freegan heirloom fugiat everyday carry odio consectetur, skateboard nulla XOXO aliqua raw denim sint mlkshk put a bird on it.</p>
         </div>
       </div>
     </div>
     <div class="col-sm-6 col-md-4">
       <div class="thumbnail">
-        <img src="/images/placeholder.jpg" alt="placeholder">
+        <a href="#"><img src="/images/placeholder.jpg" alt="placeholder"></a>
         <div class="caption">
-          <h4>Placeholder stuff</h4>
+          <h4><a href="#">Placeholder stuff</a></h4>
           <p>VHS slow-carb locavore, mlkshk ad small batch fingerstache affogato chillwave butcher PBR&B humblebrag banjo nisi gochujang. Freegan heirloom fugiat everyday carry odio consectetur, skateboard nulla XOXO aliqua raw denim sint mlkshk put a bird on it.</p>
         </div>
       </div>
     </div>
     <div class="col-sm-6 col-md-4">
       <div class="thumbnail">
-        <img src="/images/placeholder.jpg" alt="placeholder">
-        <div class="caption">
-          <h4>Placeholder stuff</h4>
+        <a href="#"><img src="/images/placeholder.jpg" alt="placeholder"></a>
+      <a href="#">  <div class="cap</a>tion">
+          <h4><a href="#">Placeholder stuff</a></h4>
           <p>VHS slow-carb locavore, mlkshk ad small batch fingerstache affogato chillwave butcher PBR&B humblebrag banjo nisi gochujang. Freegan heirloom fugiat everyday carry odio consectetur, skateboard nulla XOXO aliqua raw denim sint mlkshk put a bird on it.</p>
         </div>
       </div>
