--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -27,6 +27,12 @@
         </div>
       </div>
       <div class="form-group">
+        <label class="col-sm-2 control-label">Prove Human:</label>
+        <div class="col-sm-10">
+          <div class="g-recaptcha" data-sitekey="6LfNQRoTAAAAAJJ3ktWBVrqgzAQzycGp2lyNenLa"></div>
+        </div>
+      </div>
+      <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
           <button type="submit" class="btn btn-default">Submit</button>
           <button type="reset" class="btn btn-default">Reset</button>
