added ads for cash money

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -109,7 +109,10 @@
             </ul>
           </div>
           <div class="ads">
-            <p>ads maybe? (everyone likes extra cash)</p>
+            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <!-- Guitar Funding -->
+            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-6270505157198229" data-ad-slot="6859602199" data-ad-format="auto"></ins>
+            <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
           </div>
         </div>
       </div>
