fixed some things that bootlint complained about

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -68,11 +68,13 @@
           </ul>
           <!-- Search form -->
           <form class="navbar-form navbar-right" role="search">
-            <div class="form-group input-group">
-              <input type="text" class="form-control" placeholder="Search (but it doesn't work)">
-              <span class="input-group-btn">
-                <button class="btn btn-default"><span class="glyphicon glyphicon-search"></span> Go!</button>
-              </span>
+            <div class="form-group">
+              <div class="input-group">
+                <input type="text" class="form-control" placeholder="Search (but it doesn't work)">
+                <span class="input-group-btn">
+                  <button class="btn btn-default" type="submit"><span class="glyphicon glyphicon-search"></span> Go!</button>
+                </span>
+              </div>
             </div>
           </form>
           <ul class="nav navbar-nav navbar-right">
