--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,68 +23,68 @@
   </head>
 
   <body>
-    <!-- header -->
-    <div class="page-header container header">
-      <div class="media">
-        <div class="media-left media-middle">
-          <img src="/images/me.jpg" class="profile media-object" alt="my face">
-        </div>
-        <div class="media-body">
-          <h3 class="media-heading stroke">MATTHEW AILES -- PROGRAMMER FOR HIRE</h3>
-          <h5 class="stroke">A site for some ramblings, showing off code, and anything else I can think of.</h5>
-          {{! little loop for my social links }}
-          {{#each social}}
-            <a href="{{this.link}}" target="_blank"><img src="{{this.source}}" alt="{{this.name}}" class="social"></a>
-          {{/each}}
-        </div>
-      </div>
-    </div>
-    <!-- navbar -->
-    <nav class="navbar navbar-inverse">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#"></a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li{{{home}}}><a href="/">Home</a></li>
-            <li class="dropdown{{{portfolio}}}">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Portfolio <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="/portfolio">My Portfolio</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="https://www.github.com/vidarc" target="_blank">My Github</a></li>
-              </ul>
-            </li>
-            <li{{{resume}}}><a href="/resume">Resume</a></li>
-            <li{{{about}}}><a href="/about">About</a></li>
-            <li{{{contact}}}><a href="/contact">Contact</a></li>
-          </ul>
-          <!-- Search form -->
-          <form class="navbar-form navbar-right" role="search">
-            <div class="form-group">
-              <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search (but it doesn't work)">
-                <span class="input-group-btn">
-                  <button class="btn btn-default" type="submit"><span class="glyphicon glyphicon-search"></span> Go!</button>
-                </span>
-              </div>
-            </div>
-          </form>
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-            <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
     <div class="container">
+      <!-- header row -->
+      <div class="row header">
+        <div class="media">
+          <div class="media-left media-middle">
+            <img src="/images/me.jpg" class="profile media-object" alt="my face">
+          </div>
+          <div class="media-body">
+            <h3 class="media-heading stroke">MATTHEW AILES -- PROGRAMMER FOR HIRE</h3>
+            <h5 class="stroke">A site for some ramblings, showing off code, and anything else I can think of.</h5>
+            {{! little loop for my social links }}
+            {{#each social}}
+              <a href="{{this.link}}" target="_blank"><img src="{{this.source}}" alt="{{this.name}}" class="social"></a>
+            {{/each}}
+          </div>
+        </div>
+      </div>
+      <!-- navbar row -->
+      <div class="row">
+        <nav class="navbar navbar-inverse navbar-sm">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+          </div>
+          <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+              <li{{{home}}}><a href="/">Home</a></li>
+              <li class="dropdown{{{portfolio}}}">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Portfolio <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="/portfolio">My Portfolio</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li><a href="https://www.github.com/vidarc" target="_blank">My Github</a></li>
+                </ul>
+              </li>
+              <li{{{resume}}}><a href="/resume">Resume</a></li>
+              <li{{{about}}}><a href="/about">About</a></li>
+              <li{{{contact}}}><a href="/contact">Contact</a></li>
+            </ul>
+            <!-- Search form -->
+            <form class="navbar-form navbar-right" role="search">
+              <div class="form-group">
+                <div class="input-group">
+                  <input type="text" class="form-control search" placeholder="Search (but it doesn't work)">
+                  <span class="input-group-btn">
+                    <button class="btn btn-default search" type="submit"><span class="glyphicon glyphicon-search"></span> Go!</button>
+                  </span>
+                </div>
+              </div>
+            </form>
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+              <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+      <!-- main section row -->
       <div class="row">
         <div class="col-sm-9">
           <!-- starting point for handlebars -->
@@ -118,13 +118,15 @@
           </div>
         </div>
       </div>
+      <!-- footer, put some contact type stuff down here -->
+      <div class="row">
+        <footer class="blog-footer">
+          <p>Built by <a href="email:mattailes@gmail.com">Matthew Ailes</a> on the <a href="https://www.mongodb.org/" alt="mongodb">M</a><a href="http://expressjs.com/" alt="express">E</a><a href="https://angularjs.org/" alt="angular">A</a><a href="http://nodejs.org" alt="nodejs">N</a> stack, <a href="http://getbootstrap.com" alt="bootstrap">Bootstrap</a>, and <a href="http://handlebarsjs.com" alt="handlebars">handlebars</a>.</p>
+          <p>Social media icons are from <a href="https://www.iconfinder.com/iconsets/social-aquicons">Lanan Illustration</a>.</p>
+          <p>All content is possibly copyrighted 2015 - {{year}} &copy;</p>
+        </footer>
+      </div>
     </div>
-    <!-- footer, put some contact type stuff down here -->
-    <footer class="blog-footer">
-      <p>Built by <a href="email:mattailes@gmail.com">Matthew Ailes</a> on the <a href="https://www.mongodb.org/" alt="mongodb">M</a><a href="http://expressjs.com/" alt="express">E</a><a href="https://angularjs.org/" alt="angular">A</a><a href="http://nodejs.org" alt="nodejs">N</a> stack, <a href="http://getbootstrap.com" alt="bootstrap">Bootstrap</a>, and <a href="http://handlebarsjs.com" alt="handlebars">handlebars</a>.</p>
-      <p>Social media icons are from <a href="https://www.iconfinder.com/iconsets/social-aquicons">Lanan Illustration</a>.</p>
-      <p>All content is possibly copyrighted 2015 - {{year}} &copy;</p>
-    </footer>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
