a few random changes

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,17 +1,7 @@
-<div>
-  <pre class="prettyprint"><code class="language-cpp">void MatthewAiles(std::string education, std::vector skills, int experience) {
-  bool dream_job = false;
-  while (!dream_job) {
-    handOutResumes(education, skills, experience);
-    interview();
-    if (hired) {
-      dream_job = true;
-    }
-  }
-}</code></pre>
-</div>
-
-<div>
+<div class="row">
+  <div class="page-header">
+    <h1>Hello World! <small>This is me</small></h1>
+  </div>
   <!-- start the blog template -->
   <div class="blog-title">
     <h2>Sample Blog Title</h2>
@@ -43,6 +33,3 @@
   </div>
   <hr>
 </div>
-
-<!-- Google Code Prettyify) -->
-<script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js?skin=desert"></script>
