--- a/views/resume.handlebars
+++ b/views/resume.handlebars
@@ -1,4 +1,4 @@
-<div>
+<div class="row">
   <h1><strong>Education</strong></h1>
   <h3>Virginia Commonwealth University -- May 2013</h3>
   <p>Bachelor of Arts in Political Science</p>
