--- a/views/portfolio.handlebars
+++ b/views/portfolio.handlebars
@@ -1,10 +1,10 @@
-<div>
+<div class="row">
   <h3 class="text-center">My Portfolio</h3>
-  <center>
+  <div class="text-center">
     <a href="#javascript"><span class="label label-info">JavaScript</span></a>
     <a href="#nodejs"><span class="label label-info">Node.js</span></a>
     <a href="#cpp"><span class="label label-info">C/C++</span></a>
-  </center>
+  </div>
   <hr>
   <h4 id="javascript">JavaScript</h4>
   <div class="row">
