started trying out semantic ui, changed mind

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,6 +10,9 @@
     <meta name="description" content="A site for some ramblings, showing off code, and anything else I can think of.">
     <meta name="keywords" content="HTML5, CSS3, JavaScript, Node.js, MySQL, C/C++, Music, Video Games, Guitar, blog">
     <title>Matthew Ailes -- Programmer for Hire</title>
+    <!-- Semantic UI stuff -->
+    <link rel="stylesheet" type="text/css" href="/dist/semantic.min.css">
+    <script src="/dist/semantic.min.js"></script>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha256-7s5uDGW3AHqw6xtJmNNtr+OBRJUlgkNJEo78P4b0yRw= sha512-nNo+yCHEyn0smMxSswnf/OnX6/KwJuZTlNZBjauKhTK0c+zT+q5JOCx0UFhXQ6rJR9jg6Es8gPuD2uZcYDLqSw==" crossorigin="anonymous">
     <!-- Google Fonts -->
@@ -50,7 +53,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a href="/" class="navbar-brand"><span class="glyphicon glyphicon-home"></span></a>
+            <a href="/" class="navbar-brand"><i class="home icon"></i></a>
           </div>
           <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
