everything is back to normal

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,6 +10,7 @@
     <meta name="description" content="A site for some ramblings, showing off code, and anything else I can think of.">
     <meta name="keywords" content="HTML5, CSS3, JavaScript, Node.js, MySQL, C/C++, Music, Video Games, Guitar, blog">
     <title>Matthew Ailes -- Programmer for Hire</title>
+    <!-- Stylesheets and scripts -->
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha256-7s5uDGW3AHqw6xtJmNNtr+OBRJUlgkNJEo78P4b0yRw= sha512-nNo+yCHEyn0smMxSswnf/OnX6/KwJuZTlNZBjauKhTK0c+zT+q5JOCx0UFhXQ6rJR9jg6Es8gPuD2uZcYDLqSw==" crossorigin="anonymous">
     <!-- Google Fonts -->
