quite a few style changes. chaning up resume format to be more templatey. add style later

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -106,6 +106,8 @@ a {
   color: #ae0001;
 }
 
+/* resume related styles */
+
 /* footer stuff. "borrowed" from the bootstrap example */
 .blog-footer {
   padding: 40px 0;
