--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -34,7 +34,7 @@
       </div>
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-          <button type="submit" class="btn btn-default">Submit</button>
+          <button type="submit" class="btn btn-default"><span class="glyphicon glyhpicon-envelope"></span> Send Message</button>
           <button type="reset" class="btn btn-default">Reset</button>
         </div>
       </div>
