--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -3,11 +3,11 @@
     <h1>Hello World! <small>This is me</small></h1>
   </div>
   <!-- start the blog template -->
-  <div class="blog-title">
-    <h2>Sample Blog Title</h2>
-    <p>January 01, 2016</p>
-  </div>
-  <div class="blog-body">
+  <article class="blog-body">
+    <header class="blog-title">
+      <h2>Sample Blog Title</h2>
+      <p>January 01, 2016</p>
+    </header>
     <p>At some point this website will be fully functional. Right now though, I'm just working on styling and back end stuff. Most everything is just a placeholder and doesn't work.</p>
     <blockquote>I'm so confused, am I a normal person?<br>
       You know, I can't tell if I'm a normal person, it's true<br>
@@ -30,6 +30,6 @@
         </div>
       </div>
     </div>
-  </div>
+  </article>
   <hr>
 </div>
