--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,6 +13,8 @@
     <!-- Stylesheets and scripts -->
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha256-7s5uDGW3AHqw6xtJmNNtr+OBRJUlgkNJEo78P4b0yRw= sha512-nNo+yCHEyn0smMxSswnf/OnX6/KwJuZTlNZBjauKhTK0c+zT+q5JOCx0UFhXQ6rJR9jg6Es8gPuD2uZcYDLqSw==" crossorigin="anonymous">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
     <!-- Google Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,700|Source+Code+Pro:400,700|Playfair+Display+SC:400,700|Righteous' rel='stylesheet' type='text/css'>
     <!-- My stylesheet -->
@@ -83,7 +85,7 @@
           {{{body}}}
         </div>
         <!-- sidebar (address, archives, maybe ads?) -->
-        <div class="col-sm-3">
+        <div class="col-sm-2 col-sm-offset-1">
           <div class="row">
             <form role="search">
               <div class="form-group">
@@ -100,12 +102,6 @@
             <div class="about">
               <h4 class="text-center">About</h4>
               <p class="text-justify">Just a guy looking to program for money. I also enjoy things such as playing guitar, watching soccer (COYS!), listening to music (I enjoy almost everything), and really anything nerd related. I hope you enjoy a look into my head. Enjoy your stay.</p>
-              <br>
-              <address>
-                <strong>Matthew Ailes</strong><br>
-                103 S Boulevard #2<br>
-                Richmond, VA 23220<br>
-              </address>
             </div>
             <div class="archives">
               <h3>Archives</h3>
