--- a/views/resume.handlebars
+++ b/views/resume.handlebars
@@ -1,8 +1,55 @@
 <div class="row">
-  <h1><strong>Education</strong></h1>
-  <h3>Virginia Commonwealth University -- May 2013</h3>
-  <p>Bachelor of Arts in Political Science</p>
-  <br>
-  <h3>Oregon State Univeristy -- June 2016</h3>
-  <p>Bachelor of Science in Computer Science</p>
+  <div class="info-section">
+    <h5>{{content.name}} | {{content.address}} | {{content.phone}} | {{content.email}}</h5>
+  </div>
+  <div class="row">
+    <div class="col-sm-6">
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h4 class="panel-title">Education</h4>
+        </div>
+        <div class="panel-body">
+          {{#each content.college}}
+            <p>{{this.name}} -- {{this.date}}</p>
+            <p>{{this.degree}}</p>
+            <p>{{this.gpa}}</p>
+            {{#unless @last}}
+              <hr>
+            {{/unless}}
+          {{/each}}
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6">
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h4 class="panel-title">Skills</h4>
+        </div>
+        <div class="panel-body">
+          {{#each content.skills}}
+            <div class="progress">
+              <div class="progress-bar progress-bar-success" style="width: {{{this.level}}}%">
+                <span>{{this.name}}</span>
+              </div>
+            </div>
+          {{/each}}
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="panel panel-info">
+    <div class="panel-heading">
+      <h4 class="panel-title">Work History</h4>
+    </div>
+    <div class="panel-body">
+      {{#each content.work}}
+        <p>{{this.employer}}</p>
+        <p>{{this.title}}</p>
+        <p>{{this.joined}} - {{this.left}}</p>
+        {{#unless @last}}
+          <hr>
+        {{/unless}}
+      {{/each}}
+    </div>
+  </div>
 </div>
