--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -85,37 +85,39 @@
           {{{body}}}
         </div>
         <!-- sidebar (address, archives, maybe ads?) -->
-        <div class="col-sm-2 col-sm-offset-1">
+        <div class="col-sm-3">
           <div class="row">
-            <form role="search">
-              <div class="form-group">
-                <div class="input-group">
-                  <input type="text" class="form-control search" placeholder="Search (but it doesn't work)">
-                  <span class="input-group-btn">
-                    <button class="btn btn-default search" type="submit"><span class="glyphicon glyphicon-search"></span> Go!</button>
-                  </span>
-                </div>
+            <div class="col-sm-offset-1 col-sm-11">
+              <div class="row">
+                <form role="search">
+                  <div class="form-group">
+                    <div class="input-group">
+                      <input type="text" class="form-control search" placeholder="Search (but it doesn't work)">
+                      <span class="input-group-btn">
+                        <button class="btn btn-default search" type="submit"><span class="glyphicon glyphicon-search"></span> Go!</button>
+                      </span>
+                    </div>
+                  </div>
+                </form>
               </div>
-            </form>
-          </div>
-          <div class="row">
-            <div class="about">
-              <h4 class="text-center">About</h4>
-              <p class="text-justify">Just a guy looking to program for money. I also enjoy things such as playing guitar, watching soccer (COYS!), listening to music (I enjoy almost everything), and really anything nerd related. I hope you enjoy a look into my head. Enjoy your stay.</p>
-            </div>
-            <div class="archives">
-              <h3>Archives</h3>
-              <ul>
-                <li>Test list</li>
-                <li>Just placeholders</li>
-                <li>Will change later</li>
-              </ul>
-            </div>
-            <div class="ads">
-              <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-              <!-- Guitar Funding -->
-              <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-6270505157198229" data-ad-slot="6859602199" data-ad-format="auto"></ins>
-              <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+              <div class="row about">
+                <h4 class="text-center">About</h4>
+                <p class="text-justify">Just a guy looking to program for money. I also enjoy things such as playing guitar, watching soccer (COYS!), listening to music (I enjoy almost everything), and really anything nerd related. I hope you enjoy a look into my head. Enjoy your stay.</p>
+              </div>
+              <div class="row archives">
+                <h3>Archives</h3>
+                <ul>
+                  <li>Test list</li>
+                  <li>Just placeholders</li>
+                  <li>Will change later</li>
+                </ul>
+              </div>
+              <div class="row ads">
+                <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <!-- Guitar Funding -->
+                <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-6270505157198229" data-ad-slot="6859602199" data-ad-format="auto"></ins>
+                <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+              </div>
             </div>
           </div>
         </div>
