--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,6 +13,14 @@
  font-family: 'Righteous', cursive;
  */
 
+ /* font display optimization
+ already in bootstrap, just for my reference */
+ html {
+   -moz-osx-font-smoothing: grayscale;
+   -webkit-font-smoothing: antialiased;
+   text-rendering: optimizeLegibility;
+ }
+
 body {
   background-color: #fafafa;
   font: 14px 'Roboto', sans-serif;
