--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -114,12 +114,12 @@
               </div>
               <div class="row ads">
                 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                <!-- Guitar Funding -->
+                <!-- guitar_money -->
                 <ins class="adsbygoogle"
-                  style="display:block"
-                  data-ad-client="ca-pub-6270505157198229"
-                  data-ad-slot="6859602199"
-                  data-ad-format="auto"></ins>
+                     style="display:block"
+                     data-ad-client="ca-pub-6270505157198229"
+                     data-ad-slot="3422320992"
+                     data-ad-format="auto"></ins>
                 <script>
                   (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
