a fair amount of changes. gxip compression added. started work on steam api

--- a/views/portfolio.handlebars
+++ b/views/portfolio.handlebars
@@ -6,96 +6,40 @@
     <a href="#cpp"><span class="label label-info">C/C++</span></a>
   </div>
   <hr>
+  <!-- Javascript section -->
   <h4 id="javascript">JavaScript</h4>
   <div class="row">
-    <div class="col-sm-6 col-md-4">
-      <div class="thumbnail">
-        <a href="#"><img src="/images/placeholder.jpg" alt="placeholder"></a>
-        <div class="caption">
-          <h4><a href="#">Placeholder stuff</a></h4>
-          <p>VHS slow-carb locavore, mlkshk ad small batch fingerstache affogato chillwave butcher PBR&B humblebrag banjo nisi gochujang. Freegan heirloom fugiat everyday carry odio consectetur, skateboard nulla XOXO aliqua raw denim sint mlkshk put a bird on it.</p>
+    {{#each js}}
+      <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+          <a href="{{{this.link}}}"><img src="{{{this.image}}}" alt="{{{this.name}}}"></a>
+          <div class="caption">
+            <h4><a href="{{{this.link}}}">{{this.name}}</a></h4>
+            <p>{{this.description}}</p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col-sm-6 col-md-4">
-      <div class="thumbnail">
-        <a href="#"><img src="/images/placeholder.jpg" alt="placeholder"></a>
-        <div class="caption">
-          <h4><a href="#">Placeholder stuff</a></h4>
-          <p>VHS slow-carb locavore, mlkshk ad small batch fingerstache affogato chillwave butcher PBR&B humblebrag banjo nisi gochujang. Freegan heirloom fugiat everyday carry odio consectetur, skateboard nulla XOXO aliqua raw denim sint mlkshk put a bird on it.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-6 col-md-4">
-      <div class="thumbnail">
-        <a href="#"><img src="/images/placeholder.jpg" alt="placeholder"></a>
-        <div class="caption">
-          <h4><a href="#">Placeholder stuff</a></h4>
-          <p>VHS slow-carb locavore, mlkshk ad small batch fingerstache affogato chillwave butcher PBR&B humblebrag banjo nisi gochujang. Freegan heirloom fugiat everyday carry odio consectetur, skateboard nulla XOXO aliqua raw denim sint mlkshk put a bird on it.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-6 col-md-4">
-      <div class="thumbnail">
-        <a href="#"><img src="/images/placeholder.jpg" alt="placeholder"></a>
-        <div class="caption">
-          <h4><a href="#">Placeholder stuff</a></h4>
-          <p>VHS slow-carb locavore, mlkshk ad small batch fingerstache affogato chillwave butcher PBR&B humblebrag banjo nisi gochujang. Freegan heirloom fugiat everyday carry odio consectetur, skateboard nulla XOXO aliqua raw denim sint mlkshk put a bird on it.</p>
-        </div>
-      </div>
-    </div>
+    {{/each}}
   </div>
   <hr>
+  <!-- Node.js section -->
   <h4 id="nodejs">Node.js</h4>
   <div class="row">
-    <div class="col-sm-6 col-md-4">
-      <div class="thumbnail">
-        <a href="#"><img src="/images/placeholder.jpg" alt="placeholder"></a>
-        <div class="caption">
-          <h4><a href="#">Placeholder stuff</a></h4>
-          <p>VHS slow-carb locavore, mlkshk ad small batch fingerstache affogato chillwave butcher PBR&B humblebrag banjo nisi gochujang. Freegan heirloom fugiat everyday carry odio consectetur, skateboard nulla XOXO aliqua raw denim sint mlkshk put a bird on it.</p>
+    {{#each node}}
+      <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+          <a href="{{{this.link}}}"><img src="{{{this.image}}}" alt="{{{this.name}}}"></a>
+          <div class="caption">
+            <h4><a href="{{{this.link}}}">{{this.name}}</a></h4>
+            <p>{{{this.description}}}</p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col-sm-6 col-md-4">
-      <div class="thumbnail">
-        <a href="#"><img src="/images/placeholder.jpg" alt="placeholder"></a>
-        <div class="caption">
-          <h4><a href="#">Placeholder stuff</a></h4>
-          <p>VHS slow-carb locavore, mlkshk ad small batch fingerstache affogato chillwave butcher PBR&B humblebrag banjo nisi gochujang. Freegan heirloom fugiat everyday carry odio consectetur, skateboard nulla XOXO aliqua raw denim sint mlkshk put a bird on it.</p>
-        </div>
-      </div>
-    </div>
+    {{/each}}
   </div>
   <hr>
+  <!-- C/C++ section -->
   <h4 id="cpp">C/C++</h4>
   <div class="row">
-    <div class="col-sm-6 col-md-4">
-      <div class="thumbnail">
-        <a href="#"><img src="/images/placeholder.jpg" alt="placeholder"></a>
-        <div class="caption">
-          <h4><a href="#">Placeholder stuff</a></h4>
-          <p>VHS slow-carb locavore, mlkshk ad small batch fingerstache affogato chillwave butcher PBR&B humblebrag banjo nisi gochujang. Freegan heirloom fugiat everyday carry odio consectetur, skateboard nulla XOXO aliqua raw denim sint mlkshk put a bird on it.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-6 col-md-4">
-      <div class="thumbnail">
-        <a href="#"><img src="/images/placeholder.jpg" alt="placeholder"></a>
-        <div class="caption">
-          <h4><a href="#">Placeholder stuff</a></h4>
-          <p>VHS slow-carb locavore, mlkshk ad small batch fingerstache affogato chillwave butcher PBR&B humblebrag banjo nisi gochujang. Freegan heirloom fugiat everyday carry odio consectetur, skateboard nulla XOXO aliqua raw denim sint mlkshk put a bird on it.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-6 col-md-4">
-      <div class="thumbnail">
-        <a href="#"><img src="/images/placeholder.jpg" alt="placeholder"></a>
-      <a href="#">  <div class="cap</a>tion">
-          <h4><a href="#">Placeholder stuff</a></h4>
-          <p>VHS slow-carb locavore, mlkshk ad small batch fingerstache affogato chillwave butcher PBR&B humblebrag banjo nisi gochujang. Freegan heirloom fugiat everyday carry odio consectetur, skateboard nulla XOXO aliqua raw denim sint mlkshk put a bird on it.</p>
-        </div>
-      </div>
-    </div>
   </div>
 </div>
