--- a/views/partials/head.handlebars
+++ b/views/partials/head.handlebars
@@ -15,8 +15,14 @@
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,700|Source+Code+Pro:400,700|Playfair+Display+SC:400,700|Righteous' rel='stylesheet' type='text/css'>
   <!-- My stylesheet -->
   <link rel="stylesheet" href="/stylesheets/style.css">
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
   {{! Google ReCaptcha stuff}}
   {{#if contact}}
-  <script src='https://www.google.com/recaptcha/api.js'></script>
+    <script src='https://www.google.com/recaptcha/api.js'></script>
   {{/if}}
 </head>
