added my website to portfolio and changed some file paths

--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,7 +1,7 @@
 <div class="row header">
   <div class="media">
     <div class="media-left media-middle">
-      <img src="/images/me.jpg" class="profile media-object" alt="my face">
+      <img src="/images/resized/me.jpg" class="profile media-object" alt="my face">
     </div>
     <div class="media-body">
       <h3 class="media-heading stroke">MATTHEW AILES -- PROGRAMMER FOR HIRE</h3>
