--- a/views/portfolio_views/steam.handlebars
+++ b/views/portfolio_views/steam.handlebars
@@ -12,13 +12,10 @@
     <div class="form-group">
       <div class="col-sm-8 col-sm-offset-2 text-center">
         <label class="radio-inline">
-          <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1"> 1
+          <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="steamid"> Steam ID
         </label>
         <label class="radio-inline">
-          <input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2"> 2
-        </label>
-        <label class="radio-inline">
-          <input type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3"> 3
+          <input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="vanityid"> Vanity ID
         </label>
       </div>
     </div>
