--- a/views/portfolio_views/steam.handlebars
+++ b/views/portfolio_views/steam.handlebars
@@ -1,35 +1,43 @@
 <div class="row">
   <form class="form-horizontal" action="/portfolio/steam" method="post">
-    <legend>Search for Video Games</legend>
+    <legend>Get Your Steam Information</legend>
     <div class="form-group">
       <div class="col-sm-8 col-sm-offset-2 input-group">
-        <input type="text" class="form-control" id="searchTerm" name="searchTerm" placeholder="Video Game Title" required>
+        <input type="text" class="form-control" id="searchTerm" name="searchTerm" placeholder="Steam ID Number" required>
         <span class="input-group-btn">
           <button class="btn btn-default search" type="submit"><span class="glyphicon glyphicon-search"></span> Search</button>
         </span>
-      </div>
-    </div>
-    <div class="form-group">
-      <div class="col-sm-8 col-sm-offset-2 text-center">
-        <label class="radio-inline">
-          <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="steamid"> Steam ID
-        </label>
-        <label class="radio-inline">
-          <input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="vanityid"> Vanity ID
-        </label>
       </div>
     </div>
   </form>
 </div>
 <div class="help-block"></div>
 <div class="row">
-  <div class="col-sm-8 col-sm-offset-2">
+  <div class="col-sm-10 col-sm-offset-1">
     <div class="panel panel-default">
       <div class="panel-heading">
         <h4 class="panel-title">Steam Information</h4>
       </div>
       <div class="panel-body">
-        <p>{{response.steamid}}</p>
+        <div class="media">
+          <div class="media-left">
+            <a href="#">
+              <img class="media-object" src="/images/placeholder.jpg" alt="Steam Profile" style="width: 128px">
+            </a>
+          </div>
+          <div class="media-body">
+            <dl class="dl-horizontal">
+              <dt>Steam ID</dt>
+                <dd>ph</dd>
+              <dt>Persona Name</dt>
+                <dd>ph</dd>
+              <dt>Profile URL</dt>
+                <dd>ph</dd>
+              <dt>Real Name</dt>
+                <dd>ph</dd>
+            </dl>
+          </div>
+        </div>
       </div>
     </div>
   </div>
