--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,5 +1,12 @@
 <div class="row">
-  <img src="images/kylo_me.jpg" class="kylo img-responsive center-block" alt="Hipster Kylo Ren">
-  <hr>
-  <p>I am a huge nerd about many things.</p>
+  {{#each section}}
+    {{#if this.image}}
+      <img src="{{{this.image}}}" class="about-image img-responsive center-block" alt="{{{this.alt}}}">
+    {{/if}}
+    <h3>{{this.header}}</h3>
+    <p>{{this.description}}</p>
+    {{#unless @last}}
+      <hr>
+    {{/unless}}
+  {{/each}}
 </div>
