forgot required for the steam type search

--- a/views/portfolio_views/steam.handlebars
+++ b/views/portfolio_views/steam.handlebars
@@ -12,7 +12,7 @@
     <div class="form-group">
       <div class="col-sm-8 col-sm-offset-2 input-group">
         <label class="radio-inline">
-          <input type="radio" name="searchType" value="number">
+          <input type="radio" name="searchType" value="number" required>
           SteamID
         </label>
         <label class="radio-inline">
