💄 changing the UI around to maybe be better

--- a/packages/ui/src/components/button/style.scss
+++ b/packages/ui/src/components/button/style.scss
@@ -11,6 +11,6 @@ button {
 
   &.primary {
     background-color: var(--button-primary);
-    color: #ffffff;
+    color: var(--body-text-primary);
   }
 }
