💄 simple styling for "a" tags

--- a/packages/ui/src/global/app.scss
+++ b/packages/ui/src/global/app.scss
@@ -21,3 +21,9 @@ body {
 [type='submit'] {
   appearance: none;
 }
+
+a {
+  color: var(--body-text-secondary);
+  cursor: pointer;
+  text-decoration: none;
+}
